--- a/apps/uscope/src-tauri/Cargo.toml
+++ b/apps/uscope/src-tauri/Cargo.toml
@@ -23,4 +23,10 @@ tauri-plugin-opener = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+log = "0.4"
+env_logger="0.11.8"
 reqwest = { version = "0.11", features = ["json"] }
+mdns = "3"
+futures-util = "0.3"
+futures = "0.3"
+once_cell = "1.19"
