--- a/apps/uscope/package.json
+++ b/apps/uscope/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
+    "@tailwindcss/vite": "^4.1.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
