--- a/apps/uscope/package.json
+++ b/apps/uscope/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@pixi/core": "^7.4.3",
+    "@pixi/display": "^7.4.3",
+    "@pixi/graphics": "^7.4.3",
+    "@pixi/react": "^8.0.2",
+    "@pixi/ticker": "^7.4.3",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
@@ -21,8 +26,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.514.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "pixi.js": "^8.10.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.1",
@@ -30,8 +36,8 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "tw-animate-css": "^1.3.4",
     "typescript": "~5.6.2",
