--- a/apps/uscope/tsconfig.json
+++ b/apps/uscope/tsconfig.json
@@ -21,6 +21,7 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
+        "types": ["react", "react-dom"],
 
         /* Linting */
         "strict": true,
